# api-tree

./: .gitignore  AGENTS.md  README.md  SKILL.md  api-tree.py  build.bat  build.sh  openapi-test.json  pyproject.toml  setup.iss  skill.md
.opencode/skills/api-tree/: SKILL.md
.run/: Mypy Type Check.run.xml  help.run.xml  run-html-test.run.xml  run-print-test.run.xml  构建编译.run.xml  构建编译Win.run.xml  查看帮助.run.xml  查看版本.run.xml
docs/: RELEASE_NOTES_SPEC.md
readme/: Chinese.md  SimplifiedChinese.md  TraditionalChinese.md
script/: build.bat  build.sh  clear.sh  env-clean.bat  init.bat  init.sh  mac-build.sh  mac-clear.sh  mac-env-clean.sh  mac-init.sh  mac-mypy.sh  mypy.sh  win-build.bat  win-clear.bat  win-init.bat  win-mypy.bat
src/: __init__.py  __init__.py.testbak  main.py
src/api_tree/: __init__.py  _version.py  main.py
src/api_tree/app/: __init__.py  agent_output.py  args.py  color.py  config.py  console.py  core.py  fetcher.py  html.py  rag_output.py  search.py  tree.py  updater.py
src/api_tree/installer/macOS/: install.sh  uninstall.sh
src/api_tree/tools/: merge_src.py
src/app/: __init__.py  __main__.py  agent_output.py  app.py  args.py  banner.py  cli.py  color.py  config.py  console.py  core.py  fetcher.py  html.py  rag_output.py  tree.py
src/installer/Windows/: install.bat  uninstall.bat
src/installer/macOS/: install.sh
src/tools/: __init__.py  merge_src.py  patch_version.py
todo/: auto-update.md  update-command-plan.md
