[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-tree"
version = "0.1.0"
description = "Fetch OpenAPI route information and print as a tree structure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
api-tree = "api_tree.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_tree"]

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "api_tree._version"
ignore_missing_imports = true
